# enhance

./: .flake8  .gitignore  README.md  pyproject.toml  run.bat  run.sh
enhanceAI.lrdevplugin/: Export.lua  ExportServiceProvider.lua  Info.lua  Util.lua
models/DATx4/: config.json
models/MSRResNetx2/: config.json
models/MSRResNetx4/: config.json
models/Real-ESRGANx4v4/: config.json
models/SPANx4/: config.json
src/: main.py
src/basicsr_plus/archs/: dat_arch.py
src/enhance/: app.py
src/enhance/lib/: file.py  gpu.py  util.py
src/enhance/op/: florence.py  masks.py  model_runner.py  sam.py  simple_tile_processor.py
src/enhance/ui/: canvasLabel.py  common.py  dialog_model.ui  dialog_model_manager.ui  dialog_taskqueue.ui  filestrip.py  icons.qrc  icons_rc.py  interface.ui  mask_selector.py  mask_visibility_list.py  operation_widget.py  progress.py  selectionManager.py  signals.py  ui_dialog_model.py  ui_dialog_model_manager.py  ui_dialog_model_manager_wrap.py  ui_dialog_model_wrap.py  ui_dialog_taskqueue.py  ui_dialog_taskqueue_wrap.py  ui_interface.py  ui_wrap.py
src/setup/: lrcPath.py  probeGPU.py  setup.ps1
src/upscale/: app.py
src/upscale/lib/: file.py  util.py
src/upscale/models/: fpn_inception.py
src/upscale/op/: florence.py  masks.py  model_runner.py  sam.py  sharpen_sr.py  sharpen_sr_utils.py  simple_tile_processor.py
src/upscale/ui/: canvasLabel.py  common.py  dialog_model.ui  dialog_model_manager.ui  filestrip.py  icons.qrc  icons_rc.py  interface.ui  progress.py  selectionManager.py  signals.py  ui_dialog_model.py  ui_dialog_model_manager.py  ui_dialog_model_manager_wrap.py  ui_dialog_model_wrap.py  ui_dialog_taskqueue_wrap.py  ui_interface.py  ui_wrap.py
